--- a/public/css/style.css
+++ b/public/css/style.css
@@ -86,3 +86,7 @@ body {
 .cursor-pointer {
     cursor: pointer;
 }
+
+.v-dialog.v-dialog--active.v-dialog--scrollable {
+    box-shadow: unset!important;
+}
