--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,21 +3,18 @@
     margin: 0;
     box-sizing: border-box;
 }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-body {
-    font-family: "Trirong", sans-serif;
-}
-
-.v-main {
-    background-color: rgb(219, 219, 190) !important;
+body * {
+  font-family: 'Poppins', sans-serif;
 }
 
 .fontall {
-    font-family: "Trirong", sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 .headermodalstyle {
-    font-family: "Trirong", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 50px;
     margin-bottom: 15px;
     /* text-shadow: 3px 3px 3px #aaa9a9; */
@@ -25,17 +22,11 @@ body {
     color: rgb(252, 247, 247);
 }
 
-.navbgset {
-    background-color: SkyBlue;
-}
-
 .footernav {
     position: fixed;
     left: 0;
-    padding-left: 10px;
-    bottom: 0;
-    width: 80%;
-    background-color: rgb(53, 52, 52);
+    right: 0;
+    bottom: 10px;
     /* color: white; */
     text-align: center;
 }
