--- a/public/css/style.css
+++ b/public/css/style.css
@@ -216,3 +216,8 @@ body * {
     top: 0;bottom: 0;
     z-index: -1;
   }
+
+  /* SWAL / SWEET ALERT2 */
+  .swal2-container.swal2-center>.swal2-popup, .swal2-popup.swal2-toast {
+    border-radius: 25px;
+  }
