--- a/public/css/style.css
+++ b/public/css/style.css
@@ -221,3 +221,6 @@ body * {
   .swal2-container.swal2-center>.swal2-popup, .swal2-popup.swal2-toast {
     border-radius: 25px;
   }
+  .swal2-styled.swal2-confirm, .swal2-styled.swal2-cancel {
+    border-radius: 100px!important;
+  }
