donor, project, etc

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -7,3 +7,8 @@ $success: #70a14f;
 $success_light: #D7F0F3;
 $danger: #ff4040;
 $danger_light: #F9DCDF;
+$info: #8950fc;
+$info_light: #eee5ff;
+
+$light: #F3F6F9;
+$grey: #A6A6B7 
