rra pra, scooping visit

--- a/src/assets/scss/geko-base-crud.scss
+++ b/src/assets/scss/geko-base-crud.scss
@@ -341,6 +341,7 @@
     padding-inline: 15px;
     font-size: 0.9em;
     font-weight: 400;
+    background-color: white;
 
     &.invalid {
       border-color: $danger !important;
