--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -33,12 +33,15 @@ button.circle {
 }
 
 .text-danger {
-  color: $danger;
+  color: $danger !important;
 }
 
 .text-small,
 .text-09-em {
   font-size: 0.9em !important;
+}
+.text-08-em {
+  font-size: 0.8em !important;
 }
 .text-xs,
 .text-07-em {
@@ -387,7 +390,10 @@ table tbody tr td:has(.indicator-left) {
     }
 
     &.info {
-      background-color: $info;
+      background-color: $info !important;
+    }
+    &.primary {
+      background-color: $primary;
     }
   }
 }
