--- a/src/views/ActivityNew/rra_pra/rra-pra.scss
+++ b/src/views/ActivityNew/rra_pra/rra-pra.scss
@@ -107,10 +107,128 @@
     .segment-menu {
         position: absolute;
         transform: translateY(-100%);
-        background-color: magenta;
         button {
-            padding-inline: 1.5em;
+            padding-inline: 2em;
             padding-block: .5em;
+            background-color: white;
+            &.active {
+                color: $success;
+                background-color: $success_light;
+
+
+                i {
+                    color: $success;
+                }
+            }
+
+            &:first-child {
+                border-top-left-radius: 12px;
+            }
+
+            &:last-child {
+                border-top-right-radius: 12px;
+            }
+        }
+    }
+
+    .detail-wrapper {
+        padding-inline: 1em;
+        padding-bottom: 2em;
+
+        table {
+            width: 100%;
+            border-spacing: 0;
+            thead {
+
+                tr {
+                    background-color: #F3F6F9;
+                    th {
+                        font-weight: 500;
+                        color: #b5b5c3 ; 
+                        padding-block: 5px;
+                    }
+                }
+                
+            }
+
+            tbody {
+                tr {
+                    td {
+                        text-align: center;
+                        padding-block: 10px;
+                    }
+                }
+            }
+        }
+
+        .detail-card-list {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+
+            .detail-card-item {
+                width: 32%;
+                margin-right: 1%;
+                background-color: #F3F6F9;
+                border-radius: 12px;
+                margin-bottom: 10px;
+                padding: 1em;
+
+                .label {
+                    font-size: .75em;
+                    font-weight: 300;
+                    margin-bottom: 0;
+                    width: 100%;
+                    line-height: 1.5em;
+                }
+
+                .value {
+                    margin-bottom: 0;
+                    font-weight: bold;
+                }
+            }
+        }
+    }
+
+    .rra-pra-detail-menu {
+        .menu-list {
+            
+            padding: 1em;
+            .menu-item {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: space-between;
+                padding-block: 7px;
+                border-bottom: 1px solid rgba(128, 128, 128, 0.1);
+                padding-inline: 10px;
+                background-color: white;
+                transition: background-color 0.2s ease;
+                h6 {
+                    font-weight: 500;
+                    font-size: 1em;
+                }
+
+                p {
+                    font-size: .7em;
+                    font-weight: 300;
+                    color: #79797bb6;
+                }
+
+                &:hover {
+                    cursor: pointer;
+                    background-color: lighten($primary_light, 5);
+                    transition: background-color 0.2s ease;
+                }
+
+
+                &.active {
+                    background-color: $primary_light;
+                    i, h6, p {
+                        color: $success;
+                    }
+                }
+            }
         }
     }
 }
