--- a/src/views/ActivityNew/rra_pra/rra-pra.scss
+++ b/src/views/ActivityNew/rra_pra/rra-pra.scss
@@ -146,6 +146,8 @@
                         font-weight: 500;
                         color: #b5b5c3 ; 
                         padding-block: 5px;
+                        font-size: .9em;
+                        padding-inline: 1em;
                     }
                 }
                 
@@ -156,6 +158,7 @@
                     td {
                         text-align: center;
                         padding-block: 10px;
+                        padding-inline: 1em;
                     }
                 }
             }
