--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -78,11 +78,17 @@ button.circle {
 .min-w-200px {
   min-width: 200px !important;
 }
+.min-w-300px {
+  min-width: 300px !important;
+}
 
 .font-weight-300 {
   font-weight: 300 !important;
 }
 
+.font-weight-400, .font-weight-normal {
+  font-weight: 400 !important;
+}
 .font-weight-500 {
   font-weight: 500 !important;
 }
