--- a/src/views/ActivityNew/rra_pra/rra-pra.scss
+++ b/src/views/ActivityNew/rra_pra/rra-pra.scss
@@ -177,6 +177,14 @@
                 margin-bottom: 10px;
                 padding: 1em;
 
+                &.md-50 {
+                    width: 48%;
+                }
+
+                &.md-100 {
+                    width: 90%;
+                }
+
                 .label {
                     font-size: .75em;
                     font-weight: 300;
