--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -105,6 +105,10 @@ button.circle {
   white-space: nowrap;
 }
 
+.text-italic {
+  font-style: italic;
+}
+
 .text-line-1 {
   display: -webkit-box;
   -webkit-line-clamp: 1;
