--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -81,6 +81,9 @@ button.circle {
 .min-w-300px {
   min-width: 300px !important;
 }
+.min-w-400px {
+  min-width: 400px !important;
+}
 
 .font-weight-300 {
   font-weight: 300 !important;
