--- a/src/assets/scss/geko-theme.scss
+++ b/src/assets/scss/geko-theme.scss
@@ -9,9 +9,120 @@ svg.wave {
 }
 
 .v-navigation-drawer.theme--light {
-  background-color: $success !important;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px !important;
+  background-color: white !important;
   color: white !important;
   height: 100% !important;
+  width: 17em !important;
+  max-width: 280px !important;
+  padding-top: 0;
+
+  .sidebar-header {
+    color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-inline: 1.3em;
+    padding-bottom: 1em;
+    img {
+      height: 4.5em;
+      width: auto;
+    }
+
+    .sidebar-profile {
+      width: 100%;
+      background-color: #f6f7f9;
+      padding: 10px;
+      align-items: center;
+      border-radius: 12px;
+
+      .avatar {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        background-color: #d1d1d1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.4em;
+        font-weight: bold;
+        color:#7a7a7a ;
+        text-transform: uppercase;
+      }
+
+      .sidebar-profile-name {
+        padding-left: 10px;
+        flex: 1;
+
+        h6 {
+          font-size: .9em;
+        }
+      }
+    }
+  }
+  
+
+  .sidebar-menus {
+    color: black !important;
+    padding-top: 1em;
+    padding-bottom: 2em;
+
+    .sidebar-menu-item {
+      display: flex;
+      flex-direction: column;
+      padding-right: .9em;
+      .sidebar-title {
+        font-weight: 600;
+        font-size: .8em;
+        text-transform: uppercase;
+        padding-block: 10px;
+        padding-left: 1.5em;
+
+      }
+      button {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding-block: .7em;
+        padding-left: 1.3em;
+        i {
+          color: rgba(88, 88, 88, 0.5) !important;
+        }
+        span {
+          padding-left: 10px;
+          font-size: .8em;
+          color: rgba(88, 88, 88, 0.8) !important;
+        }
+
+        &.active {
+          background-color: $success_light;
+          border-top-right-radius: 20px;
+          border-bottom-right-radius: 20px;
+          transition: all 0.5s ease;
+          i, span {
+            color: $success !important;
+            transition: all 0.5s ease;
+          }
+          span {
+            font-weight: 600;
+          }
+        }
+        &:hover {
+          
+          background-color: $success_light;
+          border-top-right-radius: 20px;
+          border-bottom-right-radius: 20px;
+          transition: all 0.5s ease;
+          
+          i, span {
+            color: $success !important;
+            transition: all 0.5s ease;
+          }
+        }
+      }
+    }
+  }
   //   &.v-navigation-drawer--close {
   //     visibility: visible !important;
   //     position: fixed !important;
