--- a/src/views/ActivityNew/scooping_visit/scooping-visit.scss
+++ b/src/views/ActivityNew/scooping_visit/scooping-visit.scss
@@ -196,6 +196,15 @@
                     border-radius: 5px;
                     position: absolute;
                     transition: all 0.3s ease;
+                    bottom: 0;
+                    transition: all 0.3s ease;
+                    box-shadow: 0 0 0 0 transparent;
+
+                    &:hover {
+                        bottom: 5px;
+                        transition: all 0.3s ease;
+                        box-shadow: 0 0 12px 2px rgba(128, 128, 128, 0.218);
+                    }
                 }
             }
 
