--- a/src/assets/scss/geko-theme.scss
+++ b/src/assets/scss/geko-theme.scss
@@ -129,12 +129,13 @@ svg.wave {
         padding-block: 10px;
         padding-left: 1.5em;
       }
-      button {
+      .sidebar-button {
         display: flex;
         flex-direction: row;
         align-items: center;
         padding-block: 0.7em;
         padding-left: 1.3em;
+        text-decoration: none;
         i {
           color: rgba(88, 88, 88, 0.5) !important;
         }
@@ -142,7 +143,19 @@ svg.wave {
           padding-left: 10px;
           font-size: 0.8em;
           color: rgba(88, 88, 88, 0.8) !important;
+          &.badge {
+            margin-left: 5px;
+            padding-block: 2px;
+            padding-inline: 5px;
+            font-weight: 500 !important;
+            font-size: .8em !important;
+          }
+          &.badge.text-info {
+            color: $info !important;
+            font-weight: bold;
+          }
         }
+        
 
         &.active {
           background-color: $success_light;
