--- a/src/views/Lahan/lahan.scss
+++ b/src/views/Lahan/lahan.scss
@@ -42,6 +42,13 @@
 
 .lahan-detail .polygon-wrapper {
     padding: 1em;
+    .map-placeholder {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
     .map-wrapper {
         position: relative;
         border-radius: 12px;
