lahan, polygon, etc

--- a/src/assets/scss/geko-base-crud.scss
+++ b/src/assets/scss/geko-base-crud.scss
@@ -293,6 +293,14 @@
           color: $danger !important;
         }
       }
+
+      &.geko-list-action-soft-delete {
+        background-color: $light;
+
+        i {
+          color: grey !important;
+        }
+      }
     }
 
   }
